--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@material-ui/icons": "4.11.2",
     "react": "17.0.0",
     "react-dom": "17.0.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "uuid": "8.3.1"
   },
   "devDependencies": {
     "typescript": "3.8.3"
