--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/core": "4.11.2",
     "@material-ui/icons": "4.11.2",
     "react": "17.0.0",
+    "react-beautiful-dnd": "13.0.0",
     "react-dom": "17.0.0",
     "react-scripts": "3.4.3",
     "uuid": "8.3.1"
