--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "@date-io/date-fns": "1.3.13",
     "@material-ui/core": "4.11.2",
     "@material-ui/icons": "4.11.2",
+    "@material-ui/pickers": "3.2.10",
     "axios": "0.21.0",
+    "date-fns": "2.16.1",
+    "moment": "2.29.1",
     "react": "17.0.0",
     "react-beautiful-dnd": "13.0.0",
+    "react-calendar": "3.2.1",
     "react-dom": "17.0.0",
     "react-scripts": "3.4.3",
     "uuid": "8.3.1"
