--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-beautiful-dnd": "13.0.0",
     "react-calendar": "3.2.1",
     "react-dom": "17.0.0",
+    "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.3",
     "simplebar": "5.3.0",
