--- a/client/package.json
+++ b/client/package.json
@@ -18,9 +18,12 @@
     "react-beautiful-dnd": "13.0.0",
     "react-calendar": "3.2.1",
     "react-dom": "17.0.0",
+    "react-redux": "^7.2.2",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.3",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "simplebar": "5.3.0",
     "simplebar-react": "2.3.0",
     "uuid": "8.3.1"
@@ -39,5 +42,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "proxy": "http://localhost:5000"
 }
