--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
     "@material-ui/core": "4.11.0",
     "@material-ui/icons": "4.9.1",
     "@material-ui/pickers": "3.2.10",
-    "axios": "0.21.0",
+    "axios": "^0.21.1",
     "date-fns": "2.16.1",
     "moment": "2.29.1",
     "react": "17.0.0",
